2026-01-30T13:08:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21516890932 # 1412
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 60 305
* notice: prev accum: outdated-unq outdated-all / unq all: 5221 10273 / 5295 10592
* notice: next accum: outdated-unq outdated-all / unq all: 5230 10287 / 5295 10592
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15] / []

2026-01-30T02:32:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21502313410 # 1411
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 68 319
* notice: prev accum: outdated-unq outdated-all / unq all: 5220 10272 / 5291 10588
* notice: next accum: outdated-unq outdated-all / unq all: 5221 10273 / 5295 10592
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +4 +4 -0 -0 / 4 4
* notice: removed / changed dates: [2026-01-14] / [2026-01-28]

2026-01-28T17:43:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21449161633 # 1408
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-28
* notice: last 14d: unq all: 65 316
* notice: prev accum: outdated-unq outdated-all / unq all: 5196 10243 / 5220 10272
* notice: next accum: outdated-unq outdated-all / unq all: 5220 10272 / 5291 10588
* notice: prev exec diff / last date diff / accum: unq all: +71 +316 -0 -0 / +30 +230 -0 -0 / 30 230