@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-01-30T13:08:22Z",
-  "count_outdated" : 10287,
-  "uniques_outdated" : 5230,
-  "count" : 10592,
-  "uniques" : 5295,
+  "timestamp" : "2026-01-31T12:59:50Z",
+  "count_outdated" : 10322,
+  "uniques_outdated" : 5234,
+  "count" : 10593,
+  "uniques" : 5296,
   "clones" : [
-    {
-      "timestamp": "2026-01-16T00:00:00Z",
-      "count": 35,
-      "count_minmax": [ 35, 35 ],
-      "count_decinc": [ 0, 35 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ],
-      "uniques_decinc": [ 0, 4 ]
-    },
     {
       "timestamp": "2026-01-17T00:00:00Z",
       "count": 10,
@@ -130,6 +121,15 @@
       "uniques": 0,
       "uniques_minmax": [ 0, 0 ],
       "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-01-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
