@@ -1,12 +1,7 @@
 {
-  "count": 305,
-  "uniques": 60,
+  "count": 271,
+  "uniques": 58,
   "clones": [
-    {
-      "timestamp": "2026-01-16T00:00:00Z",
-      "count": 35,
-      "uniques": 4
-    },
     {
       "timestamp": "2026-01-17T00:00:00Z",
       "count": 10,
@@ -71,6 +66,11 @@
       "timestamp": "2026-01-29T00:00:00Z",
       "count": 0,
       "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
