@@ -1,3 +1,12 @@
+2026-01-31T12:59:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21544849422 # 1414
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
+* notice: last 14d: unq all: 58 271
+* notice: prev accum: outdated-unq outdated-all / unq all: 5230 10287 / 5295 10592
+* notice: next accum: outdated-unq outdated-all / unq all: 5234 10322 / 5296 10593
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2026-01-16] / [2026-01-30]
+
 2026-01-30T13:08:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21516890932 # 1412
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
